小傅哥，feat：第5章：数据源的解析、创建和使用

--- a/mybatis-step-05/pom.xml
+++ b/mybatis-step-05/pom.xml
@@ -56,6 +56,18 @@
             </exclusions>
         </dependency>
         <!-- LOGGING end -->
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.48</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.9</version>
+        </dependency>
     </dependencies>
 
     <build>
