--- a/mybatis-step-09/pom.xml
+++ b/mybatis-step-09/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>druid</artifactId>
             <version>1.2.9</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/ognl/ognl -->
+        <dependency>
+            <groupId>ognl</groupId>
+            <artifactId>ognl</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
